docs-archive/apache-airflow-providers-cncf-kubernetes/10.16.1/_sources/_api/airflow/providers/cncf/kubernetes/triggers/pod/index.rst.txt
airflow.providers.cncf.kubernetes.triggers.pod
==============================================

.. py:module:: airflow.providers.cncf.kubernetes.triggers.pod


Classes
-------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.triggers.pod.ContainerState
   airflow.providers.cncf.kubernetes.triggers.pod.KubernetesPodTrigger


Module Contents
---------------

.. py:class:: ContainerState

   Bases: :py:obj:`str`, :py:obj:`enum.Enum`


   Possible container states.

   See https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#pod-phase.


   .. py:attribute:: WAITING
      :value: 'waiting'



   .. py:attribute:: RUNNING
      :value: 'running'



   .. py:attribute:: TERMINATED
      :value: 'terminated'



   .. py:attribute:: FAILED
      :value: 'failed'



   .. py:attribute:: UNDEFINED
      :value: 'undefined'



.. py:class:: KubernetesPodTrigger(pod_name, pod_namespace, trigger_start_time, base_container_name, kubernetes_conn_id = None, connection_extras = None, poll_interval = 2, cluster_context = None, config_dict = None, in_cluster = None, get_logs = True, startup_timeout = 120, startup_check_interval = 5, schedule_timeout = 120, on_finish_action = 'delete_pod', on_kill_action = 'delete_pod', termination_grace_period = None, last_log_time = None, logging_interval = None, trigger_kwargs = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   KubernetesPodTrigger run on the trigger worker to check the state of Pod.

   :param pod_name: The name of the pod.
   :param pod_namespace: The namespace of the pod.
   :param kubernetes_conn_id: The :ref:`kubernetes connection id <howto/connection:kubernetes>`
       for the Kubernetes cluster.
   :param cluster_context: Context that points to kubernetes cluster.
   :param config_dict: Content of kubeconfig file in dict format.
   :param poll_interval: Polling period in seconds to check for the status.
   :param trigger_start_time: time in Datetime format when the trigger was started
   :param in_cluster: run kubernetes client with in_cluster configuration.
   :param get_logs: get the stdout of the container as logs of the tasks.
   :param startup_timeout: timeout in seconds to start up the pod.
   :param startup_check_interval: interval in seconds to check if the pod has already started.
   :param schedule_timeout: timeout in seconds to schedule pod in cluster.
   :param on_finish_action: What to do when the pod reaches its final state, or the execution is interrupted.
       If "delete_pod", the pod will be deleted regardless its state; if "delete_succeeded_pod",
       only succeeded pod will be deleted. You can set to "keep_pod" to keep the pod.
   :param on_kill_action: What to do when the trigger is cancelled (e.g. when a deferred task is
       manually marked as success/failed). If "delete_pod" (default), the pod will be deleted.
       If "keep_pod", the pod will not be deleted.
   :param termination_grace_period: Optional grace period in seconds for pod termination during cleanup.
   :param logging_interval: number of seconds to wait before kicking it back to
       the operator to print latest logs. If ``None`` will wait until container done.
   :param last_log_time: where to resume logs from
   :param trigger_kwargs: additional keyword parameters to send in the event


   .. py:attribute:: pod_name


   .. py:attribute:: pod_namespace


   .. py:attribute:: trigger_start_time


   .. py:attribute:: base_container_name


   .. py:attribute:: kubernetes_conn_id
      :value: None



   .. py:attribute:: connection_extras
      :value: None



   .. py:attribute:: poll_interval
      :value: 2



   .. py:attribute:: cluster_context
      :value: None



   .. py:attribute:: config_dict
      :value: None



   .. py:attribute:: in_cluster
      :value: None



   .. py:attribute:: get_logs
      :value: True



   .. py:attribute:: startup_timeout
      :value: 120



   .. py:attribute:: startup_check_interval
      :value: 5



   .. py:attribute:: schedule_timeout
      :value: 120



   .. py:attribute:: last_log_time
      :value: None



   .. py:attribute:: logging_interval
      :value: None



   .. py:attribute:: on_finish_action


   .. py:attribute:: on_kill_action


   .. py:attribute:: termination_grace_period
      :value: None



   .. py:attribute:: trigger_kwargs


   .. py:method:: serialize()

      Serialize KubernetesCreatePodTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Get current pod status and yield a TriggerEvent.



   .. py:property:: hook
      :type: airflow.providers.cncf.kubernetes.hooks.kubernetes.AsyncKubernetesHook



   .. py:property:: pod_manager
      :type: airflow.providers.cncf.kubernetes.utils.pod_manager.AsyncPodManager



   .. py:method:: get_task_instance(session)

      Get the task instance for this trigger from the database (Airflow 2.x only).



   .. py:method:: get_task_state()
      :async:


      Get the current state of the task instance.



   .. py:method:: safe_to_cancel()
      :async:


      Whether it is safe to cancel the external job which is being executed by this trigger.

      Cancel is NOT safe when the task is still in DEFERRED state, because it means the
      triggerer is redistributing triggers and the trigger will be recreated on another triggerer.
      Cancel IS safe when the task state has changed (e.g. user marked it as success/failed).



   .. py:method:: cleanup()
      :async:


      Clean up the pod when the trigger is cancelled.



   .. py:method:: define_container_state(pod)


   .. py:method:: should_wait(pod_phase, container_state)
      :staticmethod:



